{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 822,
  "lineage": "c0bd225e-a6d1-ca3e-5402-703330cd5aec",
  "resources": [
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:loadbalancer/app/private-lb/19b9192c164d4920",
            "arn_suffix": "app/private-lb/19b9192c164d4920",
            "desync_mitigation_mode": "defensive",
            "dns_name": "private-lb-1920068771.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:loadbalancer/app/private-lb/19b9192c164d4920",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "private-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0dbbe5b498e8ac718",
              "sg-0ebeb5449569f0904",
              "sg-0f9a0059b3eb218ff"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06fe7709a0439f272"
              },
              {
                "subnet_id": "subnet-0a25c375f57cf4821"
              },
              {
                "subnet_id": "subnet-0d1836e73e60fef99"
              }
            ],
            "subnets": [
              "subnet-06fe7709a0439f272",
              "subnet-0a25c375f57cf4821",
              "subnet-0d1836e73e60fef99"
            ],
            "vpc_id": "vpc-035671a43714d6395",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.security.aws_security_group.allow_HTTP",
            "module.security.aws_security_group.allow_HTTPS",
            "module.security.aws_security_group.allow_SSH",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:loadbalancer/app/public-lb/aea0fdfd10caca71",
            "arn_suffix": "app/public-lb/aea0fdfd10caca71",
            "desync_mitigation_mode": "defensive",
            "dns_name": "public-lb-2106374699.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:loadbalancer/app/public-lb/aea0fdfd10caca71",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "public-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0dbbe5b498e8ac718",
              "sg-0ebeb5449569f0904",
              "sg-0f9a0059b3eb218ff"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0266981c96c73f55b"
              },
              {
                "subnet_id": "subnet-0c792c5df9b7b4984"
              },
              {
                "subnet_id": "subnet-0e1f9bc8127fe4cbc"
              }
            ],
            "subnets": [
              "subnet-0266981c96c73f55b",
              "subnet-0c792c5df9b7b4984",
              "subnet-0e1f9bc8127fe4cbc"
            ],
            "vpc_id": "vpc-035671a43714d6395",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.security.aws_security_group.allow_HTTP",
            "module.security.aws_security_group.allow_HTTPS",
            "module.security.aws_security_group.allow_SSH",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:listener/app/private-lb/19b9192c164d4920/c4a83c658b3361be",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:targetgroup/private-target-group/34b2f71d9d3d8a16",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:listener/app/private-lb/19b9192c164d4920/c4a83c658b3361be",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:loadbalancer/app/private-lb/19b9192c164d4920",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_lb.private",
            "module.load_balancer.aws_lb_target_group.alb_tg_private",
            "module.security.aws_security_group.allow_HTTP",
            "module.security.aws_security_group.allow_HTTPS",
            "module.security.aws_security_group.allow_SSH",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:listener/app/public-lb/aea0fdfd10caca71/24187c7d31e9e278",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:targetgroup/public-target-group/be7856ac88ccb35e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:listener/app/public-lb/aea0fdfd10caca71/24187c7d31e9e278",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:loadbalancer/app/public-lb/aea0fdfd10caca71",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_lb.public",
            "module.load_balancer.aws_lb_target_group.alb_tg_public",
            "module.security.aws_security_group.allow_HTTP",
            "module.security.aws_security_group.allow_HTTPS",
            "module.security.aws_security_group.allow_SSH",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_tg_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:targetgroup/private-target-group/34b2f71d9d3d8a16",
            "arn_suffix": "targetgroup/private-target-group/34b2f71d9d3d8a16",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health-check",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:targetgroup/private-target-group/34b2f71d9d3d8a16",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "private-target-group",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-035671a43714d6395"
          },
          "dependencies": [
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_tg_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:targetgroup/public-target-group/be7856ac88ccb35e",
            "arn_suffix": "targetgroup/public-target-group/be7856ac88ccb35e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health-check",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:targetgroup/public-target-group/be7856ac88ccb35e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "public-target-group",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-035671a43714d6395"
          },
          "dependencies": [
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "Auth",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:targetgroup/private-target-group/34b2f71d9d3d8a16-20240308141105168200000007",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:targetgroup/private-target-group/34b2f71d9d3d8a16",
            "target_id": "i-0576c156b5f1ad83b"
          },
          "dependencies": [
            "module.load_balancer.aws_lb_target_group.alb_tg_private",
            "module.security.aws_security_group.allow_HTTP",
            "module.security.aws_security_group.allow_HTTPS",
            "module.security.aws_security_group.allow_SSH",
            "module.servers.aws_instance.Auth",
            "module.servers.aws_instance.Heating",
            "module.servers.aws_instance.Lighting",
            "module.servers.aws_instance.Status",
            "module.servers.data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "Heating",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:targetgroup/public-target-group/be7856ac88ccb35e-20240308141105130300000006",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:targetgroup/public-target-group/be7856ac88ccb35e",
            "target_id": "i-0eb4a894efa224b32"
          },
          "dependencies": [
            "module.load_balancer.aws_lb_target_group.alb_tg_public",
            "module.security.aws_security_group.allow_HTTP",
            "module.security.aws_security_group.allow_HTTPS",
            "module.security.aws_security_group.allow_SSH",
            "module.servers.aws_instance.Auth",
            "module.servers.aws_instance.Heating",
            "module.servers.aws_instance.Lighting",
            "module.servers.aws_instance.Status",
            "module.servers.data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "Lighting",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:targetgroup/public-target-group/be7856ac88ccb35e-20240308141105338800000009",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:targetgroup/public-target-group/be7856ac88ccb35e",
            "target_id": "i-08b9b51051ba0daa1"
          },
          "dependencies": [
            "module.load_balancer.aws_lb_target_group.alb_tg_public",
            "module.security.aws_security_group.allow_HTTP",
            "module.security.aws_security_group.allow_HTTPS",
            "module.security.aws_security_group.allow_SSH",
            "module.servers.aws_instance.Auth",
            "module.servers.aws_instance.Heating",
            "module.servers.aws_instance.Lighting",
            "module.servers.aws_instance.Status",
            "module.servers.data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "Status",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:targetgroup/public-target-group/be7856ac88ccb35e-20240308141105195000000008",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:targetgroup/public-target-group/be7856ac88ccb35e",
            "target_id": "i-04e75db3d4fdd80a4"
          },
          "dependencies": [
            "module.load_balancer.aws_lb_target_group.alb_tg_public",
            "module.security.aws_security_group.allow_HTTP",
            "module.security.aws_security_group.allow_HTTPS",
            "module.security.aws_security_group.allow_SSH",
            "module.servers.aws_instance.Auth",
            "module.servers.aws_instance.Heating",
            "module.servers.aws_instance.Lighting",
            "module.servers.aws_instance.Status",
            "module.servers.data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_HTTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851725568653:security-group/sg-0ebeb5449569f0904",
            "description": "allow HTTP inbound traffic",
            "egress": [],
            "id": "sg-0ebeb5449569f0904",
            "ingress": [],
            "name": "allow_HTTP",
            "name_prefix": "",
            "owner_id": "851725568653",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-035671a43714d6395"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_HTTPS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851725568653:security-group/sg-0f9a0059b3eb218ff",
            "description": "allow HTTPS inbound traffic",
            "egress": [],
            "id": "sg-0f9a0059b3eb218ff",
            "ingress": [],
            "name": "allow_HTTPS",
            "name_prefix": "",
            "owner_id": "851725568653",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-035671a43714d6395"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_SSH",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851725568653:security-group/sg-0dbbe5b498e8ac718",
            "description": "allow SSH inbound traffic from my IP only",
            "egress": [],
            "id": "sg-0dbbe5b498e8ac718",
            "ingress": [],
            "name": "allow_SSH",
            "name_prefix": "",
            "owner_id": "851725568653",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-035671a43714d6395"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_HTTPS_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-4223908591",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f9a0059b3eb218ff",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.allow_HTTPS",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_HTTPS_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-429076701",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f9a0059b3eb218ff",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.allow_HTTPS",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_HTTP_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-724260913",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0ebeb5449569f0904",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.allow_HTTP",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_HTTP_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2565553599",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ebeb5449569f0904",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.allow_HTTP",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_HTTP_ingress_3000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3000,
            "id": "sgrule-2259012063",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ebeb5449569f0904",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.allow_HTTP",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_SSH_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3041870475",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0dbbe5b498e8ac718",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.allow_SSH",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_SSH_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "31.205.213.69/32",
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3381651832",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0dbbe5b498e8ac718",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.allow_SSH",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.servers",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Auth",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9932f4918a00c4f",
            "arn": "arn:aws:ec2:eu-west-2:851725568653:instance/i-0576c156b5f1ad83b",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0576c156b5f1ad83b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kp-nc1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03aaeda754f9de130",
            "private_dns": "ip-10-0-1-93.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.93",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04789a9a86ed5eb2d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d1836e73e60fef99",
            "tags": {
              "name": "Auth_server"
            },
            "tags_all": {
              "name": "Auth_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dbbe5b498e8ac718",
              "sg-0ebeb5449569f0904",
              "sg-0f9a0059b3eb218ff"
            ]
          },
          "dependencies": [
            "module.security.aws_security_group.allow_HTTP",
            "module.security.aws_security_group.allow_HTTPS",
            "module.security.aws_security_group.allow_SSH",
            "module.servers.data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.servers",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Heating",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9932f4918a00c4f",
            "arn": "arn:aws:ec2:eu-west-2:851725568653:instance/i-0eb4a894efa224b32",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eb4a894efa224b32",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kp-nc1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-043a02a583f4c105b",
            "private_dns": "ip-10-0-2-231.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.231",
            "public_dns": "ec2-35-178-133-35.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.178.133.35",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09dbf7cb83d1efbe0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e1f9bc8127fe4cbc",
            "tags": {
              "name": "Heating_server"
            },
            "tags_all": {
              "name": "Heating_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dbbe5b498e8ac718",
              "sg-0ebeb5449569f0904",
              "sg-0f9a0059b3eb218ff"
            ]
          },
          "dependencies": [
            "module.security.aws_security_group.allow_HTTP",
            "module.security.aws_security_group.allow_HTTPS",
            "module.security.aws_security_group.allow_SSH",
            "module.servers.data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.servers",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Lighting",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9932f4918a00c4f",
            "arn": "arn:aws:ec2:eu-west-2:851725568653:instance/i-08b9b51051ba0daa1",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08b9b51051ba0daa1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kp-nc1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07c4ba7ccf3e6789b",
            "private_dns": "ip-10-0-2-104.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.104",
            "public_dns": "ec2-18-170-27-24.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.170.27.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fd047fdbbdbe6dfa",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e1f9bc8127fe4cbc",
            "tags": {
              "name": "Lighting_server"
            },
            "tags_all": {
              "name": "Lighting_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dbbe5b498e8ac718",
              "sg-0ebeb5449569f0904",
              "sg-0f9a0059b3eb218ff"
            ]
          },
          "dependencies": [
            "module.security.aws_security_group.allow_HTTP",
            "module.security.aws_security_group.allow_HTTPS",
            "module.security.aws_security_group.allow_SSH",
            "module.servers.data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.servers",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Status",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9932f4918a00c4f",
            "arn": "arn:aws:ec2:eu-west-2:851725568653:instance/i-04e75db3d4fdd80a4",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04e75db3d4fdd80a4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kp-nc1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0663bccc45e76d72f",
            "private_dns": "ip-10-0-2-13.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.13",
            "public_dns": "ec2-18-170-37-114.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.170.37.114",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03fb2496502f0c99c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e1f9bc8127fe4cbc",
            "tags": {
              "name": "Status_server"
            },
            "tags_all": {
              "name": "Status_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dbbe5b498e8ac718",
              "sg-0ebeb5449569f0904",
              "sg-0f9a0059b3eb218ff"
            ]
          },
          "dependencies": [
            "module.security.aws_security_group.allow_HTTP",
            "module.security.aws_security_group.allow_HTTPS",
            "module.security.aws_security_group.allow_SSH",
            "module.servers.data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d6f3af05e1e92f49",
            "domain": "vpc",
            "id": "eipalloc-0d6f3af05e1e92f49",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-52-56-124-70.eu-west-2.compute.amazonaws.com",
            "public_ip": "52.56.124.70",
            "public_ipv4_pool": "amazon",
            "tags": {
              "name": "natGateway_elasticIP"
            },
            "tags_all": {
              "name": "natGateway_elasticIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851725568653:internet-gateway/igw-0e4cdf01525ae7f48",
            "id": "igw-0e4cdf01525ae7f48",
            "owner_id": "851725568653",
            "tags": {
              "name": "internet_gateway"
            },
            "tags_all": {
              "name": "internet_gateway"
            },
            "vpc_id": "vpc-035671a43714d6395"
          },
          "dependencies": [
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT_Gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d6f3af05e1e92f49",
            "association_id": "eipassoc-0e5f0f7481463c7a3",
            "connectivity_type": "public",
            "id": "nat-03ce58e52c8874019",
            "network_interface_id": "eni-091840e376a1cfead",
            "private_ip": "10.0.2.94",
            "public_ip": "52.56.124.70",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e1f9bc8127fe4cbc",
            "tags": {
              "name": "Nat_Gateway"
            },
            "tags_all": {
              "name": "Nat_Gateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.elastic_ip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851725568653:route-table/rtb-0ace0ebefb3976b77",
            "id": "rtb-0ace0ebefb3976b77",
            "owner_id": "851725568653",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03ce58e52c8874019",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "private_route_table"
            },
            "tags_all": {
              "name": "private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-035671a43714d6395"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.elastic_ip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.NAT_Gateway",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851725568653:route-table/rtb-03d7f8cade7a0c93c",
            "id": "rtb-03d7f8cade7a0c93c",
            "owner_id": "851725568653",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e4cdf01525ae7f48",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "public_route_table"
            },
            "tags_all": {
              "name": "public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-035671a43714d6395"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087dc63039b8b8cad",
            "route_table_id": "rtb-0ace0ebefb3976b77",
            "subnet_id": "subnet-0d1836e73e60fef99"
          },
          "dependencies": [
            "module.vpc.aws_eip.elastic_ip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.NAT_Gateway",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.shn"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4b41238cfaea984",
            "route_table_id": "rtb-0ace0ebefb3976b77",
            "subnet_id": "subnet-0a25c375f57cf4821"
          },
          "dependencies": [
            "module.vpc.aws_eip.elastic_ip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.NAT_Gateway",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.shn"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ddac7fc697e8dc1",
            "route_table_id": "rtb-0ace0ebefb3976b77",
            "subnet_id": "subnet-06fe7709a0439f272"
          },
          "dependencies": [
            "module.vpc.aws_eip.elastic_ip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.NAT_Gateway",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e923f3a6d86a980",
            "route_table_id": "rtb-03d7f8cade7a0c93c",
            "subnet_id": "subnet-0e1f9bc8127fe4cbc"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.shn"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0466a3a4507598c5a",
            "route_table_id": "rtb-03d7f8cade7a0c93c",
            "subnet_id": "subnet-0c792c5df9b7b4984"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.shn"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9b630b98ca9df90",
            "route_table_id": "rtb-03d7f8cade7a0c93c",
            "subnet_id": "subnet-0266981c96c73f55b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851725568653:subnet/subnet-0d1836e73e60fef99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1836e73e60fef99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725568653",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "private_subnets"
            },
            "tags_all": {
              "name": "private_subnets"
            },
            "vpc_id": "vpc-035671a43714d6395"
          },
          "dependencies": [
            "module.vpc.aws_vpc.shn"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851725568653:subnet/subnet-0a25c375f57cf4821",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a25c375f57cf4821",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725568653",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "private_subnets"
            },
            "tags_all": {
              "name": "private_subnets"
            },
            "vpc_id": "vpc-035671a43714d6395"
          },
          "dependencies": [
            "module.vpc.aws_vpc.shn"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851725568653:subnet/subnet-06fe7709a0439f272",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06fe7709a0439f272",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725568653",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "private_subnets"
            },
            "tags_all": {
              "name": "private_subnets"
            },
            "vpc_id": "vpc-035671a43714d6395"
          },
          "dependencies": [
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851725568653:subnet/subnet-0e1f9bc8127fe4cbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1f9bc8127fe4cbc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851725568653",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "public_subnets"
            },
            "tags_all": {
              "name": "public_subnets"
            },
            "vpc_id": "vpc-035671a43714d6395"
          },
          "dependencies": [
            "module.vpc.aws_vpc.shn"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851725568653:subnet/subnet-0c792c5df9b7b4984",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c792c5df9b7b4984",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851725568653",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "public_subnets"
            },
            "tags_all": {
              "name": "public_subnets"
            },
            "vpc_id": "vpc-035671a43714d6395"
          },
          "dependencies": [
            "module.vpc.aws_vpc.shn"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851725568653:subnet/subnet-0266981c96c73f55b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0266981c96c73f55b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851725568653",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "public_subnets"
            },
            "tags_all": {
              "name": "public_subnets"
            },
            "vpc_id": "vpc-035671a43714d6395"
          },
          "dependencies": [
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "shn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851725568653:vpc/vpc-035671a43714d6395",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d81912ca8d936499",
            "default_route_table_id": "rtb-09a66258b09b95da5",
            "default_security_group_id": "sg-0f8caee90bf36bf3b",
            "dhcp_options_id": "dopt-02fd0b363fead2c88",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-035671a43714d6395",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09a66258b09b95da5",
            "owner_id": "851725568653",
            "tags": {
              "name": "smart_home_network_VPC"
            },
            "tags_all": {
              "name": "smart_home_network_VPC"
            }
          }
        }
      ]
    }
  ]
}